[package]
name = "safequanta-tls"
version = "0.1.0"
edition = "2021"
authors = ["Ali Salimi <alisalimi77@gmail.com>"]
description = "A quantum-safe TLS proxy implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alisalimi77/SafeQuanta-TLS"
readme = "README.md"
keywords = ["tls", "cryptography", "quantum", "proxy", "security"]
categories = ["cryptography", "network-programming", "security"]

[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.25"

# TLS and cryptography
rustls = "0.22"
rustls-pemfile = "2.0"
rustls-native-certs = "0.7"
ring = "0.17"
openssl = "0.10"
openssl-sys = "0.9"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.13"
dotenv = "0.15"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# HTTP and networking
hyper = { version = "1.0", features = ["full"] }
http = "1.0"
bytes = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
async-trait = "0.1"
futures = "0.3"
once_cell = "1.19"
parking_lot = "0.12"

# Quantum-safe cryptography dependencies
pqcrypto-kyber = "0.5"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
rand = "0.8"
rand_core = "0.6"

# Certificate generation
rcgen = "0.11"

# Additional dependencies
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
mockall = "0.12"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true 